# test

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
33/: index.html
33/export/: influxDbData.txt
34/: index.html
34/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
34/export/: influxDbData.txt  prometheusData.txt
34/history/: categories-trend.json  duration-trend.json  history.json
34/widgets/: environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
35/: index.html
35/export/: influxDbData.txt
36/: index.html
36/export/: influxDbData.txt
37/: index.html
38/: index.html
39/: index.html
40/: index.html
allure-results/: 0a4205d1-7f1e-460c-ab25-4db6b64e8ce9-container.json  130c7467-3baf-4512-8a99-0bbe74973731-container.json  15141ea4-ded5-4550-9726-46f4380a645b-container.json  41b7e1f6-5ffb-4c73-bc41-1d0c7aea0318-result.json  63f5ff3d-0b0a-4d3c-9528-817d3721f7d8-result.json  65b0902d-62b7-42bc-ab2c-fb27acd45c02-container.json  6e34f6d1-9351-4159-910e-bf4246eba947-container.json  9973ec90-4c1b-42b3-be13-f5ed9eab6e8f-container.json  9fa7005d-5028-4d89-82aa-e6fec73af15c-result.json  a40f1132-b884-476d-86d1-aa250c507d99-container.json  aced040a-9bd6-49dd-90c8-70ab06e10772-container.json  b7c94db4-38fa-41d4-bc3d-ba2386c669ae-result.json  d2139fa7-8877-49fe-949a-90426cf465cd-container.json  f10a7342-a23c-479c-9427-6fb77f23b507-container.json
tests/: test_api.py  test_ui.py
(+10 files in other folders)
