[tool.poetry]
name = "project-selenium"
version = "0.1.0"
description = ""
authors = ["Mick <garon312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.29.0"
pytest = "^8.3.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
