[tool.poetry]
name = "qa-tests"
version = "0.1.0"
description = ""
authors = ["Nadia <leonna.leohope@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.30.0"
pytest = "^8.3.5"
requests = "^2.32.3"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
